# healthcabinet

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS  LICENSE  README.md
healthcabinet/backend/: .dockerignore  .env.example  .env.test  Dockerfile  entrypoint.sh  pyproject.toml
healthcabinet/backend/alembic/: alembic.ini  env.py
healthcabinet/backend/alembic/versions/: 001_initial_schema.py  002_user_profiles.py  003_documents.py  004_health_values.py  005_documents_keep_partial.py  006_documents_pending_retry_metadata.py  007_health_values_flagging.py  008_ai_memories_epic4.py  009_ai_memories_constraints.py  010_audit_logs.py  011_admin_user_account_state_and_flag_review.py  012_audit_logs_user_attribution.py  013_consent_logs_retain_on_user_delete.py  014_audit_logs_admin_id_set_null.py  015_users_tokens_invalid_before.py  016_document_intelligence_fields.py  017_ai_memory_scope.py  018_user_profile_encryption_phase1.py  019_ai_chat_messages.py
healthcabinet/backend/app/: main.py
healthcabinet/backend/app/admin/: models.py  repository.py  router.py  schemas.py  service.py
healthcabinet/backend/app/ai/: llm_client.py  models.py  repository.py  router.py  safety.py  schemas.py  service.py
healthcabinet/backend/app/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
healthcabinet/backend/app/billing/: models.py  repository.py  router.py  schemas.py  service.py
healthcabinet/backend/app/core/: config.py  database.py  encryption.py  middleware.py  rate_limit.py  (+1 more)
healthcabinet/backend/tests/: conftest.py  test_health.py  test_main.py
(+498 files in other folders)
